🛠 Fixed view header z-index issues

--- a/obsidian.css
+++ b/obsidian.css
@@ -4105,26 +4105,21 @@ transition: 50ms ease-in-out;
 transition: 100ms ease-in-out;
 }
 
-body:not(.plugin-sliding-panes-rotate-header)
-.workspace-leaf-content[data-type="markdown"]
-.workspace-leaf-header,
-body:not(.plugin-sliding-panes-rotate-header)
-.workspace-leaf-content[data-type="kanban"]
-.view-header,
-body:not(.plugin-sliding-panes-rotate-header)
-.workspace-leaf-content[data-type="markdown"]
-.view-header {
+body:not(.plugin-sliding-panes-rotate-header) .workspace-leaf-content[data-type="markdown"] .workspace-leaf-header,
+body:not(.plugin-sliding-panes-rotate-header) .workspace-leaf-content[data-type="kanban"] .view-header,
+body:not(.plugin-sliding-panes-rotate-header) .workspace-leaf-content[data-type="markdown"] .view-header {
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.06);
 position: relative;
+}
+
+body:not(.is-mobile):not(.plugin-sliding-panes-rotate-header) .workspace-leaf-content[data-type="markdown"] .workspace-leaf-header,
+body:not(.is-mobile):not(.plugin-sliding-panes-rotate-header) .workspace-leaf-content[data-type="kanban"] .view-header,
+body:not(.is-mobile):not(.plugin-sliding-panes-rotate-header) .workspace-leaf-content[data-type="markdown"] .view-header{
 z-index: 10;
 }
 
-body.theme-dark:not(.plugin-sliding-panes-rotate-header)
-.workspace-leaf-content[data-type="markdown"]
-.workspace-leaf-header,
-body.theme-dark:not(.plugin-sliding-panes-rotate-header)
-.workspace-leaf-content[data-type="markdown"]
-.view-header {
+body.theme-dark:not(.plugin-sliding-panes-rotate-header) .workspace-leaf-content[data-type="markdown"] .workspace-leaf-header,
+body.theme-dark:not(.plugin-sliding-panes-rotate-header) .workspace-leaf-content[data-type="markdown"] .view-header {
 box-shadow: 0px 1px 4px rgba(25, 25, 25, 0.3);
 }
 
